--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "fs": "0.0.1-security",
     "jade": "~1.11.0",
+    "lodash": "^4.17.4",
     "mongoose": "^4.4.7",
     "morgan": "~1.6.1",
     "multer": "^1.2.1",
